resolves #1308 resolves #1309 encode XML entities and set a max-length